Cacio update and support for Windows headless run